--- a/bets.html
+++ b/bets.html
@@ -35,21 +35,95 @@
 			</div>
 		</div>
 	</div>
-
-    <div class="caixa">
-        <div id="resultado">Lose</div>
-        Cloud9<br>
-        Cloud 9 vs 100T<br>
-        Mapa 3 Equipe que mata o próximo dragão(1)
-
+    <div class="caixa-status">
+        Win
+        <div class="caixa-win">
+        SK - Odd 3,20x<br>
+        Fnatic - SK<br>
+        Map 2 SK Win
+        </div>
     </div>
 
-    <div class="caixa">
-        <div id="resultado">Lose</div>
-        Cloud9<br>
-        Cloud 9 vs 100T<br>
-        Mapa 3 Equipe que mata o próximo dragão(1)
-        
+    <div class="caixa-status">
+        Win
+        <div class="caixa-win">
+        Fnatic - Odd 1,50x<br>
+        Fnatic - SK<br>
+        Map 1 First Tower
+        </div>
     </div>
+
+    <div class="caixa-status">
+        Win
+        <div class="caixa-win">
+        Gen G - Odd 1,60x<br>
+        DRX - Gen G<br>
+        Map 2 First Tower
+        </div>
+    </div>
+
+    <div class="caixa-status">
+        Win
+        <div class="caixa-win">
+        Gen G - Odd 1,60x<br>
+        DRX - Gen G<br>
+        Map 1 First Tower
+        </div>
+    </div>
+
+    <div class="caixa-status">
+        Win
+        <div class="caixa-win">
+        eStar - Odd 2,80x<br>
+        eStar - Sunning<br>
+        Map 2 First Tower
+        </div>
+    </div>
+
+    <div class="caixa-status">
+        Win
+        <div class="caixa-win">
+        eStar - Odd 2,80x<br>
+        eStar - Sunning<br>
+        Map 1 First Tower
+        </div>
+    </div>
+
+    <div class="caixa-status">
+        Lose
+        <div class="caixa-lose">
+        LGD Gaming - Odd 2,40x<br>
+        LGD Gaming - Invictus Gaming<br>
+        Map 2 First Tower
+        </div>
+    </div>
+
+    <div class="caixa-status">
+        Lose
+        <div class="caixa-lose">
+        LGD Gaming - Odd 2,40x<br>
+        LGD Gaming - Invictus Gaming<br>
+        Map 1 First Tower
+        </div>
+    </div>
+
+    <div class="caixa-status">
+        Win
+        <div class="caixa-win">
+        Hanwha Life - Odd 1,55x<br>
+        Freddit BRION - Hanwha Life<br>
+        Map 2 First Tower
+        </div>
+    </div>
+
+    <div class="caixa-status">
+        Win
+        <div class="caixa-win">
+        Hanwha Life - Odd 1,55x<br>
+        Freddit BRION - Hanwha Life<br>
+        Map 1 First Tower
+        </div>
+    </div>
+
 </body>
 </html>
